2008-12-23  Cosimo Cecchi  <cosimoc@gnome.org>

	* data/gnome-system-log.desktop.in.in: rename the menu item to read
	a more descriptive "Log File Viewer". Thanks to Calum Benson (#375684).

2008-12-23  Cosimo Cecchi  <cosimoc@gnome.org>

	* logview-window.c: restore the saved zoom size on open (#330113).
