@@ -1,5 +1,9 @@
 2008-12-23  Cosimo Cecchi  <cosimoc@gnome.org>
 
+	* logview-window.c: handle keypad shortcuts (#441564).
+
+2008-12-23  Cosimo Cecchi  <cosimoc@gnome.org>
+
 	* data/gnome-system-log.desktop.in.in: rename the menu item to read
 	a more descriptive "Log File Viewer". Thanks to Calum Benson (#375684).
 
